# BookFiler-Module-MySQL

./: CMakeLists.txt  README.md
include/BookFiler-Module-MySQL/: Interface.hpp
settings/: settings.json
src/: Module.cpp  Module.hpp
src/core/: Curl.cpp  Curl.hpp  config.hpp  git.cpp  git.hpp  httpCurl.cpp  httpCurl.hpp  imapCurl.cpp  imapCurl.hpp  imapMailio.cpp  imapMailio.hpp  mySQL.cpp  mySQL.hpp  smtpCurl.cpp  smtpCurl.hpp  ssh.cpp  ssh.hpp
src/tests/git-connect/: CMakeLists.txt  main.cpp
src/tests/git-local-connect/: CMakeLists.txt  main.cpp
src/tests/git-remote-connect/: CMakeLists.txt  main.cpp
src/tests/http-connect/: CMakeLists.txt  main.cpp
src/tests/imap-connect/: CMakeLists.txt  main.cpp
src/tests/imap-curl-connect/: CMakeLists.txt  main.cpp
src/tests/imap-mailio-connect/: CMakeLists.txt  main.cpp
src/tests/mysql-connect/: CMakeLists.txt  main.cpp
src/tests/smtp-connect/: CMakeLists.txt  main.cpp
src_example/mysql-connect/: CMakeLists.txt  main.cpp
